# thethWyrm

./: LICENSE.md  README.md  draft.ipynb  inner_optica.xlsx  models_params_mini.json  pyproject.toml  requirements.yml  runner.py  samples.ipynb  setup.py  test.ipynb  test_regression.ipynb
.ipynb_checkpoints/: draft-checkpoint.ipynb  test-checkpoint.ipynb  test_classification-checkpoint.ipynb
datasets/: malice_churn.py
models/: classic.py  some.py
mpydge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mpydge/_wrap/models/: classification.py  regression.py
mpydge/chaotic/: data.py  distortion.py  the_new_pipe.py  the_pipe.py
mpydge/data_keeper/: keeper.py  the_keeper.py
mpydge/datasets/: malice_churn.py
mpydge/models/: classic.py  old.py  some.py
mpydge/models/old/: classic.py  dismounted.py
mpydge/wrap/: data.py  new_data.py
mpydge/wrap/models/: all.py  classification.py  core.py  linear.py  reg.py  regression.py
mpydge/wrap/transformations/: transform.py  utils.py
source/: conf.py
tests/: neuro_new.py  neuro_supernova.py  new_insane.py  sell_stone.py  simple_pipe_test.py
tests/data/: compare.py  dataset_grouped.csv
thethWyrm/_wrap/models/: all.py  core.py
thethWyrm/chaotic/: data.py  the_pipe.py
thethWyrm/wrap/models/: bench.py  core.py
thethWyrm/wrap/selectors/: core.py  selectors.py
thethWyrm/wrap/transformations/: core.py  utils.py
theth_wyrm/_wrap/models/: classification.py  regression.py
theth_wyrm/chaotic/: the_pipe.py
theth_wyrm/holy/data_keeper/: keeper.py
theth_wyrm/holy/datasets/: malice_churn.py
(+8 files in other folders)
