[tool.poetry]
name = "thethWyrm"
version = "0.0.1"
description = "Modelling framework"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "thethWyrm"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"